--- a/styles.css
+++ b/styles.css
@@ -240,7 +240,7 @@ main {
     justify-content: center;
     align-items: center;
     padding: 2vh 2vw;
-    background-image: url('https://cdn-bnokp.nitrocdn.com/QNoeDwCprhACHQcnEmHgXDhDpbEOlRHH/assets/images/optimized/rev-162bb58/www.decorilla.com/online-decorating/wp-content/uploads/2023/06/Dark-marble-kitchen-design-ideas-by-Decorilla-1-2048x1365.jpg');
+    background-image: url('images/dark-kitchen.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
